--- a/client/src/css/Login.css
+++ b/client/src/css/Login.css
@@ -1,45 +1,69 @@
-.login {
+.login main {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 90vh;
   width: 100%;
-  background: rgb(1, 68, 85);
+  /* Rectangle 11 */
 }
-.login form {
+.login main form {
   background: white;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  padding: 20px 30px;
   border-radius: 3px;
   display: flex;
-  flex-direction: column;
+  width: 80%;
+  height: 80%;
 }
-.login form h2 {
-  padding-bottom: 30px;
+.login main form img {
+  flex: 0.3;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  overflow: hidden;
+}
+.login main form .form {
+  flex: 0.7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 30px;
+}
+.login main form .form .error {
+  color: rgb(255, 134, 134);
+  font-size: 0.8rem;
+  margin-bottom: 2rem;
+  background: rgb(255, 198, 198);
+  width: 80%;
+  padding: 8px;
+}
+.login main form .form h2 {
+  padding-bottom: 80px;
   text-align: center;
 }
-.login form input {
-  background: rgb(176, 223, 235);
-  border: none;
+.login main form .form input {
+  background: rgb(241, 241, 241);
+  border: 1px solid rgb(189, 189, 189);
   outline: none;
   padding: 10px;
   margin-bottom: 10px;
   font-family: inherit;
+  width: 80%;
 }
-.login form button {
+.login main form .form button {
   border: none;
   outline: none;
-  background: rgb(0, 116, 145);
+  background: var(--btn-light);
   padding: 10px;
   color: white;
   font-weight: 600;
   cursor: pointer;
   margin: 20px 0;
+  width: 80%;
 }
-.login form p {
+.login main form .form p {
   text-transform: uppercase;
 }
-.login form p a {
+.login main form .form p a {
   font-weight: 600;
-  color: rgb(0, 116, 145);
+  color: var(--btn-light);
 }/*# sourceMappingURL=Login.css.map */
