--- a/client/src/css/Login.scss
+++ b/client/src/css/Login.scss
@@ -1,49 +1,77 @@
 .login {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  width: 100%;
-  background: rgb(1, 68, 85);
-
-  form {
-    background: white;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    padding: 20px 30px;
-    border-radius: 3px;
+  main {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 90vh;
+    width: 100%;
+    /* Rectangle 11 */
 
-    h2 {
-      padding-bottom: 30px;
-      text-align: center;
-    }
+    form {
+      background: white;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+      border-radius: 3px;
+      display: flex;
+      width: 80%;
+      height: 80%;
 
-    input {
-      background: rgb(176, 223, 235);
-      border: none;
-      outline: none;
-      padding: 10px;
-      margin-bottom: 10px;
-      font-family: inherit;
-    }
+      img {
+        flex: 0.3;
+        width: 100%;
+        object-fit: cover;
+        overflow: hidden;
+      }
 
-    button {
-      border: none;
-      outline: none;
-      background: rgb(0, 116, 145);
-      padding: 10px;
-      color: white;
-      font-weight: 600;
-      cursor: pointer;
-      margin: 20px 0;
-    }
+      .form {
+        flex: 0.7;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 30px 30px;
 
-    p {
-      text-transform: uppercase;
-      a {
-        font-weight: 600;
-        color: rgb(0, 116, 145);
+        .error {
+          color: rgb(255, 134, 134);
+          font-size: 0.8rem;
+          margin-bottom: 2rem;
+          background: rgb(255, 198, 198);
+          width: 80%;
+          padding: 8px;
+        }
+
+        h2 {
+          padding-bottom: 80px;
+          text-align: center;
+        }
+
+        input {
+          background: rgb(241, 241, 241);
+          border: 1px solid rgb(189, 189, 189);
+          outline: none;
+          padding: 10px;
+          margin-bottom: 10px;
+          font-family: inherit;
+          width: 80%;
+        }
+
+        button {
+          border: none;
+          outline: none;
+          background: var(--btn-light);
+          padding: 10px;
+          color: white;
+          font-weight: 600;
+          cursor: pointer;
+          margin: 20px 0;
+          width: 80%;
+        }
+
+        p {
+          text-transform: uppercase;
+          a {
+            font-weight: 600;
+            color: var(--btn-light);
+          }
+        }
       }
     }
   }
