--- a/client/src/css/NavBar.css
+++ b/client/src/css/NavBar.css
@@ -1,5 +1,6 @@
 .nav {
   width: 100%;
+  height: 10vh;
   padding: 10px 100px;
   display: flex;
   align-items: center;
@@ -12,11 +13,12 @@
   align-items: center;
 }
 .nav .logo svg {
-  transform: scale(0.9);
+  transform: scale(0.8);
 }
 .nav .logo h2 {
-  padding-left: 10px;
+  padding-left: 3px;
   font-size: 20px;
+  color: black;
 }
 .nav ul {
   flex: 0.4;
