--- a/client/src/css/NavBar.scss
+++ b/client/src/css/NavBar.scss
@@ -1,5 +1,6 @@
 .nav {
   width: 100%;
+  height: 10vh;
   // box-shadow: ;
   padding: 10px 100px;
   display: flex;
@@ -13,11 +14,11 @@
     align-items: center;
 
     svg {
-      transform: scale(0.9);
+      transform: scale(0.8);
     }
 
     h2 {
-      padding-left: 10px;
+      padding-left: 3px;
       font-size: 20px;
       color: black;
     }
