--- a/client/src/css/SectionHero.scss
+++ b/client/src/css/SectionHero.scss
@@ -17,7 +17,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    height: 70%;
 
     h1 {
       font-weight: 500;
