--- a/client/src/css/Service.css
+++ b/client/src/css/Service.css
@@ -3,6 +3,7 @@
   padding-top: 70px;
   padding-bottom: 40px;
   position: relative;
+  scroll-behavior: smooth;
   height: 90vh;
 }
 .service .sliding-element {
@@ -10,11 +11,13 @@
   transition: transform 0.3s ease-in-out;
   will-change: transform;
   position: absolute;
+  scroll-behavior: smooth;
+  padding-left: 100px;
 }
 .service .sliding-element .service-item {
   background: white;
   margin-right: 35px;
-  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
